fixed scroll location jumping on mobile. not ideal but gives desired behaviour

--- a/web/templates/chats/chat_room.scss
+++ b/web/templates/chats/chat_room.scss
@@ -273,9 +273,7 @@ body {
   width: 100%;
   display: grid;
   // flex-direction: column;
-  position: relative;
   overflow-y: scroll;
-  overflow-scrolling: touch;
 
   &::-webkit-scrollbar {
     background: none;
